Fixing website spacing

--- a/css/homepage.css
+++ b/css/homepage.css
@@ -699,6 +699,7 @@ header.is-sticky .header__menu {
   background-color: #282828;
   color: #f4f4f4;
   z-index: 0;
+  border: 2px solid #282828;
   -webkit-transition: -webkit-transform 200ms ease-in-out;
   transition: -webkit-transform 200ms ease-in-out;
   -o-transition: transform 200ms ease-in-out;
@@ -727,7 +728,7 @@ header.is-sticky .header__menu img {
   right: 0;
   margin: auto
   width: 100px;
-  margin-bottom: 2rem;
+  margin-bottom: 3rem;
 }
 header.is-sticky .header__menu a:hover {
   text-decoration: none;
@@ -767,6 +768,7 @@ header.is-sticky .header__menu .menu__links li {
   text-decoration: none;
   margin-bottom: 0.5em;
   margin-left: 1em;
+  padding-right: 10rem;
   font-size: 20px;
 }
 @media only screen and (min-width: 30em) {
